# api/swagger/v1/swagger.yaml
@@ -160,6 +160,8 @@ components:
             - event_id
             - name
             - slug
+        has_practice:
+          type: boolean
       required:
       - id
       - aasm_state
@@ -177,6 +179,7 @@ components:
       - country
       - can_import
       - divisions
+      - has_practice
     league:
       type: object
       properties:
@@ -405,6 +408,8 @@ components:
           - semi
           - final
           - interfinal
+          - playoff
+          - practice
         series:
           type: integer
         number:
@@ -514,6 +519,7 @@ components:
           - CenterstageScore
           - CenterstageCriScore
           - IntoTheDeepScore
+          - IntoTheDeepCriScore
         red_score_total:
           type: integer
         red_score:
@@ -544,6 +550,7 @@ components:
           - "$ref": "#/components/schemas/CenterstageScore"
           - "$ref": "#/components/schemas/CenterstageCriScore"
           - "$ref": "#/components/schemas/IntoTheDeepScore"
+          - "$ref": "#/components/schemas/IntoTheDeepCriScore"
         red_teams:
           type: array
           items:
@@ -588,6 +595,7 @@ components:
           - "$ref": "#/components/schemas/CenterstageScore"
           - "$ref": "#/components/schemas/CenterstageCriScore"
           - "$ref": "#/components/schemas/IntoTheDeepScore"
+          - "$ref": "#/components/schemas/IntoTheDeepCriScore"
         blue_teams:
           type: array
           items:
@@ -1657,6 +1665,157 @@ components:
       - teleop_specimen_high
       - teleop_robot1
       - teleop_robot2
+      - minor_penalties
+      - major_penalties
+    IntoTheDeepCriScore:
+      type: object
+      properties:
+        auto_robot1:
+          type: string
+          enum:
+          - NONE
+          - OBSERVATION_ZONE
+          - ASCENT
+        auto_robot2:
+          type: string
+          enum:
+          - NONE
+          - OBSERVATION_ZONE
+          - ASCENT
+        auto_robot3:
+          type: string
+          enum:
+          - NONE
+          - OBSERVATION_ZONE
+          - ASCENT
+        auto_sample_net_near:
+          type: integer
+        auto_sample_low_near:
+          type: integer
+        auto_sample_high_near:
+          type: integer
+        auto_sample_net_far:
+          type: integer
+        auto_sample_low_far:
+          type: integer
+        auto_sample_high_far:
+          type: integer
+        auto_specimen_low_1:
+          type: integer
+        auto_specimen_high_1:
+          type: integer
+        auto_specimen_low_2:
+          type: integer
+        auto_specimen_high_2:
+          type: integer
+        auto_specimen_low_3:
+          type: integer
+        auto_specimen_high_3:
+          type: integer
+        auto_specimen_low_4:
+          type: integer
+        auto_specimen_high_4:
+          type: integer
+        auto_owned_chambers:
+          type: integer
+        teleop_sample_net_near:
+          type: integer
+        teleop_sample_low_near:
+          type: integer
+        teleop_sample_high_near:
+          type: integer
+        teleop_sample_net_far:
+          type: integer
+        teleop_sample_low_far:
+          type: integer
+        teleop_sample_high_far:
+          type: integer
+        teleop_specimen_low_1:
+          type: integer
+        teleop_specimen_high_1:
+          type: integer
+        teleop_specimen_low_2:
+          type: integer
+        teleop_specimen_high_2:
+          type: integer
+        teleop_specimen_low_3:
+          type: integer
+        teleop_specimen_high_3:
+          type: integer
+        teleop_specimen_low_4:
+          type: integer
+        teleop_specimen_high_4:
+          type: integer
+        teleop_owned_chambers:
+          type: integer
+        teleop_robot1:
+          type: string
+          enum:
+          - NONE
+          - OBSERVATION_ZONE
+          - ASCENT_1
+          - ASCENT_2
+          - ASCENT_3
+        teleop_robot2:
+          type: string
+          enum:
+          - NONE
+          - OBSERVATION_ZONE
+          - ASCENT_1
+          - ASCENT_2
+          - ASCENT_3
+        teleop_robot3:
+          type: string
+          enum:
+          - NONE
+          - OBSERVATION_ZONE
+          - ASCENT_1
+          - ASCENT_2
+          - ASCENT_3
+        coop_achieved:
+          type: boolean
+        minor_penalties:
+          type: integer
+        major_penalties:
+          type: integer
+      required:
+      - auto_robot1
+      - auto_robot2
+      - auto_robot3
+      - auto_sample_net_near
+      - auto_sample_low_near
+      - auto_sample_high_near
+      - auto_sample_net_far
+      - auto_sample_low_far
+      - auto_sample_high_far
+      - auto_specimen_low_1
+      - auto_specimen_high_1
+      - auto_specimen_low_2
+      - auto_specimen_high_2
+      - auto_specimen_low_3
+      - auto_specimen_high_3
+      - auto_specimen_low_4
+      - auto_specimen_high_4
+      - auto_owned_chambers
+      - teleop_sample_net_near
+      - teleop_sample_low_near
+      - teleop_sample_high_near
+      - teleop_sample_net_far
+      - teleop_sample_low_far
+      - teleop_sample_high_far
+      - teleop_specimen_low_1
+      - teleop_specimen_high_1
+      - teleop_specimen_low_2
+      - teleop_specimen_high_2
+      - teleop_specimen_low_3
+      - teleop_specimen_high_3
+      - teleop_specimen_low_4
+      - teleop_specimen_high_4
+      - teleop_owned_chambers
+      - teleop_robot1
+      - teleop_robot2
+      - teleop_robot3
+      - coop_achieved
       - minor_penalties
       - major_penalties
 paths:
